--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,5 @@
 {
     "server_ip" : "0.0.0.0",
     "server_port" : 8251,
-    "update_path" : "C:\\temp\\prog"
+    "update_path" : "C:\\temp\\s_prog"
 }
