--- a/client/config.json
+++ b/client/config.json
@@ -2,7 +2,5 @@
     "server_ip" : "127.0.0.1",
     "server_port" : 8251,
     "time_interval" : 5,
-    "json_file_path" : "C:\\temp\\c_prog\\Import.json",
-    "exe_file_path" : "C:\\temp\\c_prog\\btex.exe",
-    "temp_path" : "C:\\temp\\c_prog\\temp"
+    "prog_path": "%appdata%\\client"
 }
